Bug 1922825 [wpt PR 48476] - Preserve `none` in computed relative colors without a conversion, a=testonly
Automatic update from web-platform-tests
Preserve `none` in computed relative colors without a conversion

Per discussion at https://github.com/w3c/csswg-drafts/issues/10360,
there are a few test cases that incorrectly expect `none` to be
resolved to 0 in relative colors where no color space conversion was
needed. This CL updates both the test and the behavior in Blink.

Bug: 365818844
Change-Id: I14d6f83d792e4fb4e70171b833de308c66611fb4
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5905968
Reviewed-by: Fredrik Söderquist <fsopera.com>
Commit-Queue: Kevin Babbitt <kbabbittmicrosoft.com>
Cr-Commit-Position: refs/heads/main{#1368963}

--

wpt-commits: 766b106752e010363f30db798ba2ce2bceee25fb
wpt-pr: 48476

UltraBlame original commit: f91cd9ba3ba2ecb9de666fca0389ded8d6a9b554

--- a/testing/web-platform/tests/css/css-color/parsing/color-computed-relative-color.html
+++ b/testing/web-platform/tests/css/css-color/parsing/color-computed-relative-color.html
@@ -2721,9 +2721,9 @@ none
 color
 (
 srgb
-0
-0
-0
+none
+none
+none
 )
 )
 ;
@@ -2742,9 +2742,9 @@ none
 color
 (
 srgb
-0
-0
-0
+none
+none
+none
 /
 none
 )
@@ -2769,7 +2769,7 @@ srgb
 0
 .
 2
-0
+none
 )
 )
 ;
@@ -2794,7 +2794,7 @@ srgb
 0
 .
 2
-0
+none
 )
 )
 ;
@@ -2859,7 +2859,7 @@ srgb
 0
 .
 4
-0
+none
 /
 0
 .
