Bug 1924876 [wpt PR 48620] - Refactor visual overflow computation for view-transitions (part 2), a=testonly
Automatic update from web-platform-tests
Refactor visual overflow computation for view-transitions (part 2)

Use the new CC mechanism to compute the visual overflow.
We pass the layout-computed visual overflow as the max extent, and
then let CC correct it in order to map the content rect.

- We keep the replaced-content geometry projection as is, but also pass
  the "max extents" to the CC laye (ViewTransitionContentLayerImpl),
  and use it to map the border box of the original element to the
  content box of the pseudo-element. Note that the border-box is now
  in enclosing-layer space, as it needs to map correctly to the
  max extents and actual extents. The border box sent over the wire
  also has includes the offset from the enclosing layer, which would
  only be different from zero for inline elements.

- When the captured rects from CC are delivered, they are used to map.
  the contents of the old
  pseudo-elements.

Bug: 347947051
Change-Id: I5202078666d016156c5abee99772726947e8a1d9
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5920431
Commit-Queue: Noam Rosenthal <nrosenthalchromium.org>
Reviewed-by: Mike West <mkwstchromium.org>
Reviewed-by: Khushal Sagar <khushalsagarchromium.org>
Cr-Commit-Position: refs/heads/main{#1368988}

--

wpt-commits: ba4639ad64908ba29f6a9b9bf7a4d6b74dedfed2
wpt-pr: 48620

UltraBlame original commit: 445bccc159414601a2df22e1156829859dfdaec6

--- a/testing/web-platform/tests/css/css-view-transitions/outer-padding-inner-background.html
+++ b/testing/web-platform/tests/css/css-view-transitions/outer-padding-inner-background.html
@@ -17,12 +17,14 @@ title
 View
 transitions
 :
-inline
-with
-offset
-from
-containing
-block
+named
+element
+has
+padding
+inner
+element
+has
+background
 <
 /
 title
@@ -62,67 +64,22 @@ link
 rel
 =
 "
-author
-"
-href
-=
-"
-mailto
-:
-khushalsagar
-chromium
-.
-org
-"
->
-<
-link
-rel
-=
-"
 match
 "
 href
 =
 "
-inline
+outer
 -
-with
+padding
 -
-offset
+inner
 -
-from
--
-containing
--
-block
+background
 -
 ref
 .
 html
-"
->
-<
-meta
-name
-=
-"
-fuzzy
-"
-content
-=
-"
-maxDifference
-=
-0
--
-255
-;
-totalPixels
-=
-0
--
-1500
 "
 >
 <
@@ -145,71 +102,8 @@ js
 script
 >
 <
-script
-src
-=
-"
-/
-common
-/
-rendering
--
-utils
-.
-js
-"
->
-<
-/
-script
->
-<
 style
 >
-.
-outer
-{
-transform
-:
-scale
-(
-2
-)
-;
-width
-:
-100vw
-;
-text
--
-align
-:
-center
-;
-}
-.
-inner
-{
-padding
-:
-10px
-;
-transform
-:
-translate
-(
-20px
-)
-;
-view
--
-transition
--
-name
-:
-text
-;
-}
 :
 root
 {
@@ -222,7 +116,6 @@ name
 none
 ;
 }
-html
 :
 :
 view
@@ -231,7 +124,51 @@ transition
 {
 background
 :
-pink
+rebeccapurple
+;
+}
+.
+target
+{
+width
+:
+200px
+;
+height
+:
+200px
+;
+view
+-
+transition
+-
+name
+:
+target
+;
+padding
+:
+20px
+;
+}
+.
+child
+{
+width
+:
+100px
+;
+height
+:
+100px
+;
+position
+:
+relative
+;
+background
+:
+green
 ;
 }
 html
@@ -243,24 +180,9 @@ transition
 -
 group
 (
-text
+target
 )
 {
-border
-:
-10px
-solid
-black
-;
-margin
-:
--
-10px
-0
-0
--
-10px
-;
 animation
 -
 play
@@ -270,6 +192,118 @@ state
 paused
 ;
 }
+html
+:
+:
+view
+-
+transition
+-
+old
+(
+target
+)
+html
+:
+:
+view
+-
+transition
+-
+new
+(
+target
+)
+{
+animation
+:
+unset
+;
+opacity
+:
+1
+;
+}
+html
+:
+:
+view
+-
+transition
+-
+new
+(
+target
+)
+{
+position
+:
+relative
+;
+top
+:
+100px
+;
+}
+/
+*
+None
+of
+these
+should
+apply
+so
+make
+everything
+red
+if
+it
+does
+*
+/
+html
+:
+:
+view
+-
+transition
+-
+group
+(
+root
+)
+{
+animation
+:
+unset
+;
+opacity
+:
+1
+;
+background
+:
+red
+;
+}
+html
+:
+:
+view
+-
+transition
+-
+image
+-
+pair
+(
+root
+)
+{
+visibility
+:
+hidden
+}
 <
 /
 style
@@ -278,23 +312,17 @@ style
 div
 class
 =
-"
-outer
-"
+target
 >
 <
-a
+div
 class
 =
-"
-inner
-"
+child
 >
-Some
-text
 <
 /
-a
+div
 >
 <
 /
@@ -322,22 +350,25 @@ runTest
 (
 )
 {
-let
-transition
-=
 document
 .
 startViewTransition
 (
+(
 )
-;
-transition
-.
-ready
-.
-then
+=
+>
+requestAnimationFrame
+(
+(
+)
+=
+>
+requestAnimationFrame
 (
 takeScreenshot
+)
+)
 )
 ;
 }
