--- a/testing/web-platform/tests/css/css-view-transitions/inline-child-with-overflow-shadow.html
+++ b/testing/web-platform/tests/css/css-view-transitions/inline-child-with-overflow-shadow.html
@@ -18,11 +18,10 @@ View
 transitions
 :
 inline
+child
 with
-offset
-from
-containing
-block
+overflowing
+shadow
 <
 /
 title
@@ -62,24 +61,6 @@ link
 rel
 =
 "
-author
-"
-href
-=
-"
-mailto
-:
-khushalsagar
-chromium
-.
-org
-"
->
-<
-link
-rel
-=
-"
 match
 "
 href
@@ -87,42 +68,17 @@ href
 "
 inline
 -
+child
+-
 with
 -
-offset
+overflow
 -
-from
--
-containing
--
-block
+shadow
 -
 ref
 .
 html
-"
->
-<
-meta
-name
-=
-"
-fuzzy
-"
-content
-=
-"
-maxDifference
-=
-0
--
-255
-;
-totalPixels
-=
-0
--
-1500
 "
 >
 <
@@ -145,71 +101,8 @@ js
 script
 >
 <
-script
-src
-=
-"
-/
-common
-/
-rendering
--
-utils
-.
-js
-"
->
-<
-/
-script
->
-<
 style
 >
-.
-outer
-{
-transform
-:
-scale
-(
-2
-)
-;
-width
-:
-100vw
-;
-text
--
-align
-:
-center
-;
-}
-.
-inner
-{
-padding
-:
-10px
-;
-transform
-:
-translate
-(
-20px
-)
-;
-view
--
-transition
--
-name
-:
-text
-;
-}
 :
 root
 {
@@ -222,7 +115,6 @@ name
 none
 ;
 }
-html
 :
 :
 view
@@ -231,7 +123,70 @@ transition
 {
 background
 :
-pink
+rebeccapurple
+;
+}
+body
+{
+margin
+:
+0
+;
+}
+.
+target
+{
+width
+:
+100px
+;
+height
+:
+200px
+;
+position
+:
+absolute
+;
+top
+:
+100px
+;
+left
+:
+100px
+;
+view
+-
+transition
+-
+name
+:
+target
+;
+}
+.
+child
+{
+background
+:
+green
+;
+font
+-
+size
+:
+100px
+;
+box
+-
+shadow
+:
+-
+20px
+-
+20px
+yellow
 ;
 }
 html
@@ -243,24 +198,9 @@ transition
 -
 group
 (
-text
+target
 )
 {
-border
-:
-10px
-solid
-black
-;
-margin
-:
--
-10px
-0
-0
--
-10px
-;
 animation
 -
 play
@@ -270,6 +210,114 @@ state
 paused
 ;
 }
+html
+:
+:
+view
+-
+transition
+-
+old
+(
+target
+)
+html
+:
+:
+view
+-
+transition
+-
+new
+(
+target
+)
+{
+animation
+:
+unset
+;
+opacity
+:
+1
+;
+}
+html
+:
+:
+view
+-
+transition
+-
+old
+(
+target
+)
+{
+opacity
+:
+0
+;
+}
+/
+*
+None
+of
+these
+should
+apply
+so
+make
+everything
+red
+if
+it
+does
+*
+/
+html
+:
+:
+view
+-
+transition
+-
+group
+(
+root
+)
+{
+animation
+:
+unset
+;
+opacity
+:
+1
+;
+background
+:
+red
+;
+}
+html
+:
+:
+view
+-
+transition
+-
+image
+-
+pair
+(
+root
+)
+{
+visibility
+:
+hidden
+}
 <
 /
 style
@@ -278,23 +326,32 @@ style
 div
 class
 =
-"
-outer
-"
+target
 >
 <
-a
+span
 class
 =
-"
-inner
-"
+child
 >
-Some
-text
+&
+nbsp
+;
+&
+nbsp
+;
+&
+nbsp
+;
+&
+nbsp
+;
+&
+nbsp
+;
 <
 /
-a
+span
 >
 <
 /
@@ -322,22 +379,25 @@ runTest
 (
 )
 {
-let
-transition
-=
 document
 .
 startViewTransition
 (
+(
 )
-;
-transition
-.
-ready
-.
-then
+=
+>
+requestAnimationFrame
+(
+(
+)
+=
+>
+requestAnimationFrame
 (
 takeScreenshot
+)
+)
 )
 ;
 }
