--- a/testing/web-platform/tests/css/css-view-transitions/nested-elements-in-overflow.html
+++ b/testing/web-platform/tests/css/css-view-transitions/nested-elements-in-overflow.html
@@ -12,17 +12,29 @@ reftest
 wait
 >
 <
+meta
+name
+=
+"
+timeout
+"
+content
+=
+"
+long
+"
+>
+<
 title
 >
 View
 transitions
 :
-inline
-with
-offset
-from
-containing
-block
+nested
+named
+element
+in
+overflow
 <
 /
 title
@@ -85,17 +97,13 @@ match
 href
 =
 "
-inline
+nested
 -
-with
+elements
 -
-offset
+in
 -
-from
--
-containing
--
-block
+overflow
 -
 ref
 .
@@ -116,13 +124,13 @@ maxDifference
 =
 0
 -
-255
+60
 ;
 totalPixels
 =
 0
 -
-1500
+500
 "
 >
 <
@@ -145,71 +153,8 @@ js
 script
 >
 <
-script
-src
-=
-"
-/
-common
-/
-rendering
--
-utils
-.
-js
-"
->
-<
-/
-script
->
-<
 style
 >
-.
-outer
-{
-transform
-:
-scale
-(
-2
-)
-;
-width
-:
-100vw
-;
-text
--
-align
-:
-center
-;
-}
-.
-inner
-{
-padding
-:
-10px
-;
-transform
-:
-translate
-(
-20px
-)
-;
-view
--
-transition
--
-name
-:
-text
-;
-}
 :
 root
 {
@@ -222,7 +167,80 @@ name
 none
 ;
 }
-html
+.
+outer
+{
+background
+:
+lightblue
+;
+width
+:
+100px
+;
+height
+:
+100px
+;
+view
+-
+transition
+-
+name
+:
+outer
+;
+position
+:
+absolute
+;
+top
+:
+50px
+;
+left
+:
+50px
+;
+}
+.
+inner
+{
+background
+:
+lightgrey
+;
+position
+:
+relative
+;
+top
+:
+-
+50px
+;
+left
+:
+-
+50px
+;
+width
+:
+50px
+;
+height
+:
+50px
+;
+view
+-
+transition
+-
+name
+:
+inner
+;
+}
 :
 :
 view
@@ -231,10 +249,9 @@ transition
 {
 background
 :
-pink
+rebeccapurple
 ;
 }
-html
 :
 :
 view
@@ -243,31 +260,138 @@ transition
 -
 group
 (
-text
+*
 )
 {
+animation
+-
+duration
+:
+300s
+;
+}
+:
+:
+view
+-
+transition
+-
+group
+(
+outer
+)
+{
+width
+:
+50px
+;
+height
+:
+100px
+;
 border
 :
-10px
+2px
 solid
 black
 ;
-margin
+animation
 :
+none
+;
+}
+:
+:
+view
 -
-10px
-0
-0
+transition
 -
-10px
+new
+(
+*
+)
+:
+:
+view
+-
+transition
+-
+old
+(
+*
+)
+{
+position
+:
+absolute
+;
+inset
+-
+block
+-
+start
+:
+unset
+;
+inline
+-
+size
+:
+100
+%
+;
+block
+-
+size
+:
+100
+%
+;
+object
+-
+fit
+:
+contain
+;
+}
+:
+:
+view
+-
+transition
+-
+old
+(
+*
+)
+{
+opacity
+:
+0
 ;
 animation
--
-play
--
-state
 :
-paused
+none
+;
+}
+:
+:
+view
+-
+transition
+-
+new
+(
+*
+)
+{
+opacity
+:
+1
+;
+animation
+:
+none
 ;
 }
 <
@@ -283,18 +407,16 @@ outer
 "
 >
 <
-a
+div
 class
 =
 "
 inner
 "
 >
-Some
-text
 <
 /
-a
+div
 >
 <
 /
@@ -322,16 +444,11 @@ runTest
 (
 )
 {
-let
-transition
-=
 document
 .
 startViewTransition
 (
 )
-;
-transition
 .
 ready
 .
