Bug 1924942 [wpt PR 48638] - sideways: Support of `position-try-fallbacks`, a=testonly
Automatic update from web-platform-tests
sideways: Support of `position-try-fallbacks`

Bug: 40501131
Change-Id: Ia8d1d4424c2a72e7cdb5fbaa531cd3337577203e
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5934043
Auto-Submit: Kent Tamura <tkentchromium.org>
Reviewed-by: Koji Ishii <kojiichromium.org>
Commit-Queue: Koji Ishii <kojiichromium.org>
Cr-Commit-Position: refs/heads/main{#1369215}

--

wpt-commits: ee6d1e048c1d9cc6de8be13cf0dbda4bf79c41ec
wpt-pr: 48638

UltraBlame original commit: ab3f2fd7ba678e9f8180e8864781559d9dc21f41

--- a/testing/web-platform/tests/css/css-anchor-position/try-tactic-wm.html
+++ b/testing/web-platform/tests/css/css-anchor-position/try-tactic-wm.html
@@ -421,6 +421,80 @@ height
 }
 )
 ;
+test_try_tactic_wm
+(
+'
+flip
+-
+inline
+'
+'
+sideways
+-
+lr
+'
+'
+ltr
+'
+{
+left
+:
+10
+top
+:
+340
+width
+:
+30
+height
+:
+40
+}
+)
+;
+/
+/
+Effectively
+flips
+left
+:
+10px
+to
+right
+:
+10px
+:
+test_try_tactic_wm
+(
+'
+flip
+-
+block
+'
+'
+sideways
+-
+rl
+'
+'
+ltr
+'
+{
+left
+:
+360
+top
+:
+20
+width
+:
+30
+height
+:
+40
+}
+)
+;
 /
 /
 Mirror
