Bug 1924944 [wpt PR 48639] - sideways: Support scroll anchoring, a=testonly
Automatic update from web-platform-tests
sideways: Support scroll anchoring

* Store the anchor object offset as a LogicalOffset, not a block-
  flipped LayoutPoint
* Add functions converting between LogicalOffset and gfx::Vector2d /
  gfx::PointF / ScrollOffset.

Bug: 40501131
Change-Id: I8d32b1a2a8e9fc6ade68f12188430ac768dd14d2
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5933384
Reviewed-by: Koji Ishii <kojiichromium.org>
Auto-Submit: Kent Tamura <tkentchromium.org>
Commit-Queue: Koji Ishii <kojiichromium.org>
Cr-Commit-Position: refs/heads/main{#1369217}

--

wpt-commits: 33cd7ece3a146fb5b2025a27ba8a6f6d3a72ac95
wpt-pr: 48639

UltraBlame original commit: 25f4778b46c3a6dfd5d09d5261b6fd6116ec4435

--- a/testing/web-platform/tests/css/css-scroll-anchoring/start-edge-in-block-layout-direction.html
+++ b/testing/web-platform/tests/css/css-scroll-anchoring/start-edge-in-block-layout-direction.html
@@ -139,6 +139,32 @@ vertical
 rl
 ;
 }
+html
+.
+slr
+{
+writing
+-
+mode
+:
+sideways
+-
+lr
+;
+}
+html
+.
+srl
+{
+writing
+-
+mode
+:
+sideways
+-
+rl
+;
+}
 .
 horz
 .
@@ -984,6 +1010,188 @@ corner
 }
 "
 Vertical
+-
+RL
+RTL
+.
+"
+)
+;
+test
+(
+(
+)
+=
+>
+{
+CORNERS
+.
+forEach
+(
+(
+corner
+)
+=
+>
+{
+runCase
+(
+"
+slr
+ltr
+"
+1
+-
+1
+true
+-
+30
+0
+corner
+)
+;
+}
+)
+;
+}
+"
+Sideways
+-
+LR
+LTR
+.
+"
+)
+;
+test
+(
+(
+)
+=
+>
+{
+CORNERS
+.
+forEach
+(
+(
+corner
+)
+=
+>
+{
+runCase
+(
+"
+slr
+rtl
+"
+1
+1
+true
+-
+30
+0
+corner
+)
+;
+}
+)
+;
+}
+"
+Sideways
+-
+LR
+RTL
+.
+"
+)
+;
+test
+(
+(
+)
+=
+>
+{
+CORNERS
+.
+forEach
+(
+(
+corner
+)
+=
+>
+{
+runCase
+(
+"
+srl
+ltr
+"
+-
+1
+1
+true
+30
+0
+corner
+)
+;
+}
+)
+;
+}
+"
+Sideways
+-
+RL
+LTR
+.
+"
+)
+;
+test
+(
+(
+)
+=
+>
+{
+CORNERS
+.
+forEach
+(
+(
+corner
+)
+=
+>
+{
+runCase
+(
+"
+srl
+rtl
+"
+-
+1
+-
+1
+true
+30
+0
+corner
+)
+;
+}
+)
+;
+}
+"
+Sideways
 -
 RL
 RTL
