Bug 1924811 [wpt PR 48627] - Avoid wrapping line at the start of text run with `text-wrap-mode: nowrap`, a=testonly
Automatic update from web-platform-tests
Avoid wrapping line at the start of text run with `text-wrap-mode: nowrap`

When computing the min-content size of an inline formatting context,
we could allow a soft wrap opportunity at the start of a text run.
This shouldn't happen with `text-wrap-mode: nowrap`.

Signed-off-by: Oriol Brufau <obrufauigalia.com>

--

wpt-commits: b8538c8c1cd7e6b5b7e42a618119b69b6521a17b
wpt-pr: 48627

UltraBlame original commit: 1f2c2c232654828efb3b3d3f2561932d45b5a991

--- a/testing/web-platform/tests/css/css-text/white-space/white-space-intrinsic-size-021.html
+++ b/testing/web-platform/tests/css/css-text/white-space/white-space-intrinsic-size-021.html
@@ -3826,6 +3826,371 @@ div
 div
 >
 <
+div
+class
+=
+"
+container
+narrow
+"
+>
+<
+div
+class
+=
+"
+collapse
+wrap
+"
+data
+-
+expected
+-
+client
+-
+width
+=
+"
+10
+"
+data
+-
+expected
+-
+client
+-
+height
+=
+"
+20
+"
+>
+X
+<
+a
+>
+<
+/
+a
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+collapse
+nowrap
+"
+data
+-
+expected
+-
+client
+-
+width
+=
+"
+30
+"
+data
+-
+expected
+-
+client
+-
+height
+=
+"
+10
+"
+>
+X
+<
+a
+>
+<
+/
+a
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+preserve
+wrap
+"
+data
+-
+expected
+-
+client
+-
+width
+=
+"
+10
+"
+data
+-
+expected
+-
+client
+-
+height
+=
+"
+20
+"
+>
+X
+<
+a
+>
+<
+/
+a
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+preserve
+nowrap
+"
+data
+-
+expected
+-
+client
+-
+width
+=
+"
+30
+"
+data
+-
+expected
+-
+client
+-
+height
+=
+"
+10
+"
+>
+X
+<
+a
+>
+<
+/
+a
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+preserve
+-
+breaks
+wrap
+"
+data
+-
+expected
+-
+client
+-
+width
+=
+"
+10
+"
+data
+-
+expected
+-
+client
+-
+height
+=
+"
+20
+"
+>
+X
+<
+a
+>
+<
+/
+a
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+preserve
+-
+breaks
+nowrap
+"
+data
+-
+expected
+-
+client
+-
+width
+=
+"
+30
+"
+data
+-
+expected
+-
+client
+-
+height
+=
+"
+10
+"
+>
+X
+<
+a
+>
+<
+/
+a
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+break
+-
+spaces
+wrap
+"
+data
+-
+expected
+-
+client
+-
+width
+=
+"
+20
+"
+data
+-
+expected
+-
+client
+-
+height
+=
+"
+20
+"
+>
+X
+<
+a
+>
+<
+/
+a
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+break
+-
+spaces
+nowrap
+"
+data
+-
+expected
+-
+client
+-
+width
+=
+"
+30
+"
+data
+-
+expected
+-
+client
+-
+height
+=
+"
+10
+"
+>
+X
+<
+a
+>
+<
+/
+a
+>
+<
+/
+div
+>
+<
+/
+div
+>
+<
 hr
 >
 <
@@ -7282,6 +7647,371 @@ br
 x
 -
 br
+>
+<
+/
+div
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+container
+wide
+"
+>
+<
+div
+class
+=
+"
+collapse
+wrap
+"
+data
+-
+expected
+-
+client
+-
+width
+=
+"
+30
+"
+data
+-
+expected
+-
+client
+-
+height
+=
+"
+10
+"
+>
+X
+<
+a
+>
+<
+/
+a
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+collapse
+nowrap
+"
+data
+-
+expected
+-
+client
+-
+width
+=
+"
+30
+"
+data
+-
+expected
+-
+client
+-
+height
+=
+"
+10
+"
+>
+X
+<
+a
+>
+<
+/
+a
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+preserve
+wrap
+"
+data
+-
+expected
+-
+client
+-
+width
+=
+"
+30
+"
+data
+-
+expected
+-
+client
+-
+height
+=
+"
+10
+"
+>
+X
+<
+a
+>
+<
+/
+a
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+preserve
+nowrap
+"
+data
+-
+expected
+-
+client
+-
+width
+=
+"
+30
+"
+data
+-
+expected
+-
+client
+-
+height
+=
+"
+10
+"
+>
+X
+<
+a
+>
+<
+/
+a
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+preserve
+-
+breaks
+wrap
+"
+data
+-
+expected
+-
+client
+-
+width
+=
+"
+30
+"
+data
+-
+expected
+-
+client
+-
+height
+=
+"
+10
+"
+>
+X
+<
+a
+>
+<
+/
+a
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+preserve
+-
+breaks
+nowrap
+"
+data
+-
+expected
+-
+client
+-
+width
+=
+"
+30
+"
+data
+-
+expected
+-
+client
+-
+height
+=
+"
+10
+"
+>
+X
+<
+a
+>
+<
+/
+a
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+break
+-
+spaces
+wrap
+"
+data
+-
+expected
+-
+client
+-
+width
+=
+"
+30
+"
+data
+-
+expected
+-
+client
+-
+height
+=
+"
+10
+"
+>
+X
+<
+a
+>
+<
+/
+a
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+break
+-
+spaces
+nowrap
+"
+data
+-
+expected
+-
+client
+-
+width
+=
+"
+30
+"
+data
+-
+expected
+-
+client
+-
+height
+=
+"
+10
+"
+>
+X
+<
+a
+>
+<
+/
+a
 >
 <
 /
