Bug 1925011 [wpt PR 48648] - Support custom element reactions for moveBefore, a=testonly
Automatic update from web-platform-tests
Support custom element reactions for moveBefore

- A new custom element reaction: connectedMoveCallback
- Called when the moved element is re-inserted
- Falls back to calling disconnectedMove/connectedMove if not provided.

Bug: 40150299
Change-Id: I0d3ed83ca03bbffcd2db79d1c421d8d155a4d9c8
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5920804
Reviewed-by: Dominic Farolino <domchromium.org>
Commit-Queue: Noam Rosenthal <nrosenthalchromium.org>
Cr-Commit-Position: refs/heads/main{#1369383}

--

wpt-commits: c17fab297bdc750e97907281fabfbcbead8e993f
wpt-pr: 48648

UltraBlame original commit: 44b101935f7d06afeed1ac3a7d6d5a9354010a43

--- a/testing/web-platform/tests/custom-elements/CustomElementRegistry.html
+++ b/testing/web-platform/tests/custom-elements/CustomElementRegistry.html
@@ -117,6 +117,19 @@ div
 <
 script
 >
+const
+moveBefore_supported
+=
+(
+"
+moveBefore
+"
+in
+Node
+.
+prototype
+)
+;
 test
 (
 function
@@ -2531,6 +2544,26 @@ constructor
 assert_array_equals
 (
 calls
+moveBefore_supported
+?
+[
+'
+connectedCallback
+'
+'
+disconnectedCallback
+'
+'
+connectedMoveCallback
+'
+'
+adoptedCallback
+'
+'
+attributeChangedCallback
+'
+]
+:
 [
 '
 connectedCallback
@@ -2811,6 +2844,23 @@ constructor
 assert_array_equals
 (
 calls
+moveBefore_supported
+?
+[
+'
+connectedCallback
+'
+'
+disconnectedCallback
+'
+'
+connectedMoveCallback
+'
+'
+adoptedCallback
+'
+]
+:
 [
 '
 connectedCallback
@@ -3037,6 +3087,31 @@ proxy
 assert_array_equals
 (
 prototypeCalls
+moveBefore_supported
+?
+[
+1
+'
+connectedCallback
+'
+2
+'
+disconnectedCallback
+'
+3
+'
+connectedMoveCallback
+'
+4
+'
+adoptedCallback
+'
+5
+'
+attributeChangedCallback
+'
+]
+:
 [
 1
 '
@@ -3065,15 +3140,15 @@ constructorCalls
 '
 prototype
 '
-5
+6
 '
 observedAttributes
 '
-6
+7
 '
 disabledFeatures
 '
-7
+8
 '
 formAssociated
 '
@@ -4507,6 +4582,38 @@ constructor
 assert_array_equals
 (
 prototypeCalls
+moveBefore_supported
+?
+[
+'
+connectedCallback
+'
+'
+disconnectedCallback
+'
+'
+connectedMoveCallback
+'
+'
+adoptedCallback
+'
+'
+attributeChangedCallback
+'
+'
+formAssociatedCallback
+'
+'
+formResetCallback
+'
+'
+formDisabledCallback
+'
+'
+formStateRestoreCallback
+'
+]
+:
 [
 '
 connectedCallback
@@ -4731,6 +4838,35 @@ proxy
 assert_array_equals
 (
 calls
+moveBefore_supported
+?
+[
+'
+connectedCallback
+'
+'
+disconnectedCallback
+'
+'
+connectedMoveCallback
+'
+'
+adoptedCallback
+'
+'
+attributeChangedCallback
+'
+'
+formAssociatedCallback
+'
+'
+formResetCallback
+'
+'
+formDisabledCallback
+'
+]
+:
 [
 '
 connectedCallback
@@ -4864,6 +5000,32 @@ proxy
 assert_array_equals
 (
 calls2
+moveBefore_supported
+?
+[
+'
+connectedCallback
+'
+'
+disconnectedCallback
+'
+'
+connectedMoveCallback
+'
+'
+adoptedCallback
+'
+'
+attributeChangedCallback
+'
+'
+formAssociatedCallback
+'
+'
+formResetCallback
+'
+]
+:
 [
 '
 connectedCallback
