Bug 1918521 - Remove SetInputValueFromFields  when handlekeydown in datetimebox. r=emilio
User might still typing even if all three fields are not empty.

Differential Revision: https://phabricator.services.mozilla.com/D225012

UltraBlame original commit: 66f309dfb9c2e07599b649c48b70099c6e0d6ca5

--- a/dom/html/test/forms/test_input_date_key_events.html
+++ b/dom/html/test/forms/test_input_date_key_events.html
@@ -608,19 +608,17 @@ will
 set
 it
 to
-0069
-because
-the
-/
-/
-5th
-digit
+2757
+and
+69
 will
-erase
-the
-previous
-4
-digits
+be
+set
+when
+a
+blur
+event
+happens
 .
 keys
 :
@@ -636,11 +634,48 @@ initialVal
 expectedVal
 :
 "
-0069
+2757
 -
 01
 -
 01
+"
+}
+{
+/
+/
+Type
+02292024
+in
+the
+input
+will
+set
+the
+year
+field
+to
+2024
+.
+keys
+:
+[
+"
+02292024
+"
+]
+initialVal
+:
+"
+"
+expectedVal
+:
+"
+2024
+-
+02
+-
+29
 "
 }
 {
