--- a/browser/base/content/appmenu-viewcache.inc.xhtml
+++ b/browser/base/content/appmenu-viewcache.inc.xhtml
@@ -302,6 +302,9 @@ toolbarbutton
 /
 toolbaritem
 >
+#
+ifdef
+MOZ_SELECTABLE_PROFILES
 <
 toolbarbutton
 id
@@ -320,34 +323,10 @@ subviewbutton
 subviewbutton
 -
 nav
-"
-data
+subviewbutton
 -
-l10n
--
-id
-=
+iconic
 "
-appmenuitem
--
-profiles
-"
-data
--
-l10n
--
-args
-=
-'
-{
-"
-profilename
-"
-:
-"
-"
-}
-'
 closemenu
 =
 "
@@ -360,6 +339,8 @@ true
 "
 /
 >
+#
+endif
 <
 toolbarseparator
 id
@@ -1697,6 +1678,9 @@ history
 /
 panelview
 >
+#
+ifdef
+MOZ_SELECTABLE_PROFILES
 <
 panelview
 id
@@ -1711,6 +1695,155 @@ flex
 "
 1
 "
+has
+-
+custom
+-
+header
+=
+"
+true
+"
+>
+<
+box
+id
+=
+"
+PanelUI
+-
+profiles
+-
+header
+"
+class
+=
+"
+panel
+-
+header
+"
+>
+<
+toolbarbutton
+class
+=
+"
+subviewbutton
+subviewbutton
+-
+iconic
+subviewbutton
+-
+back
+"
+id
+=
+"
+profiles
+-
+appmenu
+-
+back
+-
+button
+"
+tabindex
+=
+"
+0
+"
+closemenu
+=
+"
+none
+"
+/
+>
+<
+html
+:
+h1
+id
+=
+"
+profiles
+-
+header
+-
+title
+"
+>
+<
+html
+:
+span
+id
+=
+"
+profiles
+-
+header
+-
+content
+"
+>
+<
+/
+html
+:
+span
+>
+<
+/
+html
+:
+h1
+>
+<
+toolbarbutton
+id
+=
+"
+profiles
+-
+edit
+-
+this
+-
+profile
+-
+button
+"
+class
+=
+"
+subviewbutton
+subviewbutton
+-
+iconic
+toolbarbutton
+-
+1
+"
+data
+-
+l10n
+-
+id
+=
+"
+appmenu
+-
+edit
+-
+profile
+"
+/
+>
+<
+/
+box
 >
 <
 vbox
@@ -1735,6 +1868,22 @@ profile
 "
 >
 <
+box
+id
+=
+"
+half
+-
+height
+-
+profile
+"
+>
+<
+/
+box
+>
+<
 image
 id
 =
@@ -1751,91 +1900,40 @@ image
 image
 >
 <
-h2
-id
-=
-"
-profile
--
-name
-"
->
-<
-/
-h2
->
-<
-hbox
-id
-=
-"
-this
--
-profile
--
-buttons
-"
->
-<
-toolbarbutton
-id
-=
-"
-profiles
--
-edit
--
-this
--
-delete
--
-button
-"
-class
-=
-"
-subviewbutton
-toolbarbutton
--
-1
-"
-/
->
-<
-toolbarbutton
-id
-=
-"
-profiles
--
-delete
--
-this
--
-profile
--
-button
-"
-class
-=
-"
-subviewbutton
-toolbarbutton
--
-1
-"
-/
->
-<
-/
-hbox
->
-<
 /
 vbox
 >
 <
-toolbarseparator
+html
+:
+h2
+id
+=
+"
+profiles
+-
+subtitle
+"
+class
+=
+"
+subview
+-
+subheader
+"
+data
+-
+l10n
+-
+id
+=
+"
+appmenu
+-
+other
+-
+profiles
+"
 /
 >
 <
@@ -1853,89 +1951,43 @@ list
 vbox
 >
 <
+toolbarbutton
+id
+=
+"
+profiles
+-
+create
+-
+profile
+-
+button
+"
+class
+=
+"
+subviewbutton
+subviewbutton
+-
+iconic
+"
+data
+-
+l10n
+-
+id
+=
+"
+appmenu
+-
+create
+-
+profile
+"
+/
+>
+<
 toolbarseparator
-/
->
-<
-toolbarbutton
-id
-=
-"
-profiles
--
-close
--
-profile
--
-button
-"
-class
-=
-"
-subviewbutton
-"
-data
--
-l10n
--
-id
-=
-"
-appmenu
--
-close
--
-profile
-"
-data
--
-l10n
--
-args
-=
-'
-{
-"
-profilename
-"
-:
-"
-"
-}
-'
-/
->
-<
-toolbarbutton
-id
-=
-"
-profiles
--
-create
--
-profile
--
-button
-"
-class
-=
-"
-subviewbutton
-"
-data
--
-l10n
--
-id
-=
-"
-appmenu
--
-create
--
-profile
-"
 /
 >
 <
@@ -1979,6 +2031,8 @@ vbox
 /
 panelview
 >
+#
+endif
 <
 panelview
 id
