--- a/testing/web-platform/tests/css/css-overflow/line-clamp/webkit-line-clamp-050.html
+++ b/testing/web-platform/tests/css/css-overflow/line-clamp/webkit-line-clamp-050.html
@@ -158,6 +158,28 @@ padding
 15px
 ;
 }
+span
+{
+/
+*
+TODO
+:
+Remove
+once
+we
+don
+'
+t
+paint
+clamped
+lines
+*
+/
+color
+:
+transparent
+;
+}
 <
 /
 style
@@ -178,12 +200,26 @@ Line2
 <
 br
 >
+<
+span
+>
 Line3
+<
+/
+span
+>
 <
 /
 div
 >
+<
+span
+>
 Line4
+<
+/
+span
+>
 <
 div
 >
