Bug 1925140 [wpt PR 48658] - Add InputClosesSelect flag, a=testonly
Automatic update from web-platform-tests
Add InputClosesSelect flag

This flag is intended to de-risk the launch of SelectParserRelaxation by
partially reverting the new parser behavior to the old parser behavior
specifically in the case of an <input> tag being parsed inside a
<select>. The old parser would convert <select><input> into
<select></select><input>, and based on my research, this is the case
that is most likely going to break sites in SelectParserRelaxation:
https://github.com/whatwg/html/issues/10310

Bug: 373672164
Change-Id: I33b40d11c2001092aa076a219dd56c5ea86f13f6
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5936092
Reviewed-by: Mason Freed <masonfchromium.org>
Commit-Queue: Joey Arhar <jarharchromium.org>
Cr-Commit-Position: refs/heads/main{#1369676}

--

wpt-commits: 00e1df7e329f3d11b91d7b2e11a2db63bbd98ef9
wpt-pr: 48658

UltraBlame original commit: fdce5c8cbadca9d2447fe36c71dcd93160946cda

--- a/testing/web-platform/tests/html/semantics/forms/the-select-element/customizable-select/select-parsing.tentative.html
+++ b/testing/web-platform/tests/html/semantics/forms/the-select-element/customizable-select/select-parsing.tentative.html
@@ -241,6 +241,19 @@ div
 select
 >
 <
+select
+id
+=
+s7
+>
+<
+input
+>
+<
+/
+select
+>
+<
 div
 id
 =
@@ -753,6 +766,64 @@ options
 without
 a
 datalist
+.
+'
+)
+;
+test
+(
+(
+)
+=
+>
+{
+assert_equals
+(
+document
+.
+getElementById
+(
+'
+s7
+'
+)
+.
+parentNode
+document
+.
+body
+)
+;
+assert_equals
+(
+document
+.
+getElementById
+(
+'
+s7
+'
+)
+.
+innerHTML
+<
+input
+>
+)
+;
+}
+'
+Input
+tags
+should
+parse
+inside
+select
+instead
+of
+closing
+the
+select
 .
 '
 )
