Bug 1925172 [wpt PR 48661] - Fix internal error of csp-script-src-self.html?target_hint=_self, a=testonly
Automatic update from web-platform-tests
Fix internal error of csp-script-src-self.html?target_hint=_self

This CL fixes the error when running `csp-script-src-self.html`. The WPT
checks if CSP mechanism blocks the inline script of speculationrules.
However, the WPT uses an inline script to check whether the test fails.
And the blocked event makes a duplicate entry in key-value-store.py
server that doesn't allow duplicated entries. In this CL, allow the
inline script to check the test results and avoid firing unintended
securitypolicyviolation.

Bug: 349187226, 373673980
Change-Id: I9278edd3f3c77551677f54e4f062f6d45f1ad54b
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5936976
Reviewed-by: Hiroki Nakagawa <nhirokichromium.org>
Commit-Queue: Ryo Ogawa <negibokkengmail.com>
Reviewed-by: Takashi Toyoshima <toyoshimchromium.org>
Cr-Commit-Position: refs/heads/main{#1369795}

--

wpt-commits: 93cc80e1c199c447ac16162b2e73d59d8fbc39b2
wpt-pr: 48661

UltraBlame original commit: 3074e031444db9656a5bc84b1a44cb7e224619ec

--- a/testing/web-platform/tests/speculation-rules/prerender/resources/csp-script-src-self.html
+++ b/testing/web-platform/tests/speculation-rules/prerender/resources/csp-script-src-self.html
@@ -38,6 +38,19 @@ src
 '
 self
 '
+'
+nonce
+-
+allowed
+-
+inline
+-
+script
+-
+for
+-
+test
+'
 "
 >
 <
@@ -129,9 +142,22 @@ script
 >
 <
 script
+nonce
+=
+"
+allowed
+-
+inline
+-
+script
+-
+for
+-
+test
+"
 >
 const
-params
+searchParams
 =
 new
 URLSearchParams
@@ -143,7 +169,7 @@ search
 ;
 writeValueToServer
 (
-params
+searchParams
 .
 get
 (
