--- a/testing/web-platform/tests/css/css-values/calc-size/animation/interpolate-size-max-height-composition.html
+++ b/testing/web-platform/tests/css/css-values/calc-size/animation/interpolate-size-max-height-composition.html
@@ -325,33 +325,58 @@ size
 fit
 -
 content
-70px
-+
-size
-*
-1
-)
-'
-}
-{
-at
-:
-0
-expect
-:
-'
-calc
--
-size
 (
-fit
--
-content
 100px
 +
 size
+)
 *
 1
+.
+3
++
+(
+200px
++
+size
+)
+*
+-
+0
+.
+3
+)
+'
+}
+{
+at
+:
+0
+expect
+:
+'
+calc
+-
+size
+(
+fit
+-
+content
+(
+100px
++
+size
+)
+*
+1
++
+(
+200px
++
+size
+)
+*
+0
 )
 '
 }
@@ -371,11 +396,25 @@ size
 fit
 -
 content
-150px
+(
+100px
 +
 size
+)
 *
-1
+0
+.
+5
++
+(
+200px
++
+size
+)
+*
+0
+.
+5
 )
 '
 }
@@ -393,9 +432,19 @@ size
 fit
 -
 content
+(
+100px
++
+size
+)
+*
+0
++
+(
 200px
 +
 size
+)
 *
 1
 )
@@ -417,11 +466,26 @@ size
 fit
 -
 content
-250px
+(
+100px
 +
 size
+)
+*
+-
+0
+.
+5
++
+(
+200px
++
+size
+)
 *
 1
+.
+5
 )
 '
 }
@@ -447,14 +511,7 @@ content
 '
 /
 *
-ignored
-because
-the
-keywords
-aren
-'
-t
-compatible
+50px
 *
 /
 addFrom
@@ -467,6 +524,13 @@ content
 /
 *
 50px
+(
+fit
+-
+content
+is
+ignored
+)
 *
 /
 addTo
@@ -474,6 +538,19 @@ addTo
 '
 200px
 '
+/
+*
+adds
+to
+250px
+can
+'
+t
+interpolate
+with
+from
+*
+/
 }
 [
 {
@@ -486,22 +563,9 @@ at
 expect
 :
 '
-calc
--
-size
-(
 min
 -
 content
--
-60px
-+
-size
-*
-1
-.
-3
-)
 '
 }
 {
@@ -511,19 +575,9 @@ at
 expect
 :
 '
-calc
--
-size
-(
 min
 -
 content
-0px
-+
-size
-*
-1
-)
 '
 }
 {
@@ -539,38 +593,32 @@ calc
 -
 size
 (
-min
--
-content
-100px
-+
-size
-*
-0
-.
-5
-)
-'
-}
-{
-at
-:
-1
-expect
-:
-'
-calc
--
-size
-(
-min
+fit
 -
 content
 200px
 +
 size
-*
-0
+)
+'
+}
+{
+at
+:
+1
+expect
+:
+'
+calc
+-
+size
+(
+fit
+-
+content
+200px
++
+size
 )
 '
 }
@@ -587,17 +635,12 @@ calc
 -
 size
 (
-min
+fit
 -
 content
-300px
+200px
 +
 size
-*
--
-0
-.
-5
 )
 '
 }
