--- a/testing/web-platform/tests/css/css-values/calc-size/animation/interpolate-size-height-composition.html
+++ b/testing/web-platform/tests/css/css-values/calc-size/animation/interpolate-size-height-composition.html
@@ -325,18 +325,6 @@ fit
 -
 content
 '
-/
-*
-ignored
-because
-the
-keywords
-aren
-'
-t
-compatible
-*
-/
 addFrom
 :
 '
@@ -346,7 +334,27 @@ content
 '
 /
 *
+min
+-
+content
+is
 50px
+fit
+-
+content
+is
+ignored
+because
+min
+-
+content
+and
+fit
+-
+content
+are
+not
+compatible
 *
 /
 addTo
@@ -354,6 +362,56 @@ addTo
 '
 200px
 '
+/
+*
+combines
+with
+fit
+-
+content
+(
+50px
+)
+to
+be
+250px
+*
+/
+/
+*
+the
+composited
+from
+value
+is
+a
+min
+-
+content
+size
+and
+the
+composited
+to
+value
+is
+a
+fit
+-
+content
+size
+so
+they
+cannot
+be
+interpolated
+and
+the
+animation
+is
+discrete
+*
+/
 }
 [
 {
@@ -366,7 +424,7 @@ at
 expect
 :
 '
-5px
+50px
 '
 }
 {
@@ -388,7 +446,7 @@ at
 expect
 :
 '
-125px
+250px
 '
 }
 {
@@ -398,7 +456,7 @@ at
 expect
 :
 '
-200px
+250px
 '
 }
 {
@@ -410,7 +468,7 @@ at
 expect
 :
 '
-275px
+250px
 '
 }
 ]
