--- a/testing/web-platform/tests/digital-credentials/allow-attribute.https.html
+++ b/testing/web-platform/tests/digital-credentials/allow-attribute.https.html
@@ -95,6 +95,42 @@ script
 >
 <
 script
+src
+=
+"
+/
+resources
+/
+testdriver
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testdriver
+-
+vendor
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
 >
 const
 hostInfo
