Bug 1925387 [wpt PR 48682] - Revert https://crrev.com/c/5906880., a=testonly
Automatic update from web-platform-tests
Revert https://crrev.com/c/5906880.

The 5906880 CL breaks Firefox's internal WPT test.
The test itself is based on the unclear part of resume() and currentTime
where the test tries to validate resume() method process the data, and
increase the currentTime before its resolution, which isn't clear
on the spec.

The original test failed in the Chromium due to several bugs.
https://crbug.com/372866278, https://crbug.com/40140417

We decided to revert the previous CL until we have clear
spec and fix the chromium specific issues.
https://crrev.com/c/5906880?tab=comments

Bug: 40246707
Change-Id: I020a49f6c91c85f33262b5657f65a8d8d06d273e
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5937369
Reviewed-by: Hongchan Choi <hongchanchromium.org>
Reviewed-by: Michael Wilson <mjwilsonchromium.org>
Commit-Queue: Sunggook Chue <sunggchmicrosoft.com>
Cr-Commit-Position: refs/heads/main{#1370213}

--

wpt-commits: c350ceb1139d7427949e6033c2a3730316145944
wpt-pr: 48682

UltraBlame original commit: 02b4aa806d6d56d952a2b8167299e71b20a2ba2b

--- a/testing/web-platform/tests/webaudio/the-audio-api/the-audiocontext-interface/processing-after-resume.https.html
+++ b/testing/web-platform/tests/webaudio/the-audio-api/the-audiocontext-interface/processing-after-resume.https.html
@@ -260,54 +260,37 @@ async
 =
 >
 {
-let
-construct1
-;
-async
-function
-run_test
+const
+realtime
+=
+new
+AudioContext
 (
 )
-{
+;
+await
+realtime
+.
+audioWorklet
+.
+addModule
+(
+modulePath
+)
+;
+await
+realtime
+.
+suspend
+(
+)
+;
 const
 timeBeforeResume
 =
 realtime
 .
 currentTime
-;
-/
-/
-Get
-the
-currentTime
-at
-the
-same
-time
-with
-AudioContext
-.
-currentTime
-.
-const
-{
-node
-:
-node1
-}
-=
-await
-construct1
-;
-const
-constructReply1
-=
-await
-ping_for_reply
-(
-node1
-)
 ;
 /
 /
@@ -331,7 +314,17 @@ resume
 )
 call
 .
-await
+const
+construct1
+=
+get_node_and_reply
+(
+realtime
+)
+;
+const
+resume
+=
 realtime
 .
 resume
@@ -345,6 +338,19 @@ get_node_and_reply
 (
 realtime
 )
+;
+const
+{
+node
+:
+node1
+reply
+:
+constructReply1
+}
+=
+await
+construct1
 ;
 assert_equals
 (
@@ -386,6 +392,9 @@ after
 resume
 '
 )
+;
+await
+resume
 ;
 /
 /
@@ -476,103 +485,6 @@ matches
 '
 )
 ;
-}
-;
-const
-realtime
-=
-new
-AudioContext
-(
-)
-;
-await
-realtime
-.
-audioWorklet
-.
-addModule
-(
-modulePath
-)
-;
-construct1
-=
-get_node_and_reply
-(
-realtime
-)
-;
-if
-(
-realtime
-.
-state
-=
-=
-=
-'
-running
-'
-)
-{
-realtime
-.
-suspend
-(
-)
-;
-realtime
-.
-onstatechange
-=
-async
-(
-e
-)
-=
->
-{
-if
-(
-e
-.
-target
-.
-state
-=
-=
-=
-'
-suspended
-'
-)
-{
-e
-.
-target
-.
-onstatechange
-=
-null
-;
-await
-run_test
-(
-)
-;
-}
-}
-;
-}
-else
-{
-await
-run_test
-(
-)
-;
-}
 }
 )
 ;
