Bug 1925302 [wpt PR 48672] - [skia] Remove image filter legacy flags, a=testonly
Automatic update from web-platform-tests
[skia] Remove image filter legacy flags

Change-Id: Iefd07280198060ac7ed46d326ea0379f2ca6df3d
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5920776
Reviewed-by: Xiyuan Xia <xiyuanchromium.org>
Reviewed-by: Xiaoqian Dai <xdaichromium.org>
Commit-Queue: Michael Ludwig <michaelludwiggoogle.com>
Cr-Commit-Position: refs/heads/main{#1370373}

--

wpt-commits: 229ad07ca5f6658cd7ada7e7aac7a0558b8e0e9b
wpt-pr: 48672

UltraBlame original commit: f7859d4579ac8a6fa6b6e563fb776332aa284732

--- a/testing/web-platform/tests/css/filter-effects/backdrop-filter-plus-filter.html
+++ b/testing/web-platform/tests/css/filter-effects/backdrop-filter-plus-filter.html
@@ -104,6 +104,27 @@ html
 "
 >
 <
+meta
+name
+=
+fuzzy
+content
+=
+"
+maxDifference
+=
+0
+-
+1
+;
+totalPixels
+=
+0
+-
+210
+"
+>
+<
 p
 >
 Expected
