Bug 1925452 [wpt PR 48691] - WebKit export of https://bugs.webkit.org/show_bug.cgi?id=281731, a=testonly
Automatic update from web-platform-tests
WebKit export of https://bugs.webkit.org/show_bug.cgi?id=281731 (#48691)

--

wpt-commits: 19720eda7051556ec7c9f910af9042e183b001b6
wpt-pr: 48691

UltraBlame original commit: 90be8c89dd0c42afbfda7a5ac94c00e25eba8585

--- a/testing/web-platform/tests/scroll-animations/scroll-timelines/setting-current-time.html
+++ b/testing/web-platform/tests/scroll-animations/scroll-timelines/setting-current-time.html
@@ -325,11 +325,9 @@ createScrollLinkedAnimation
 t
 )
 ;
-assert_throws_dom
+assert_throws_js
 (
-'
-NotSupportedError
-'
+TypeError
 (
 )
 =
@@ -351,11 +349,9 @@ parse
 }
 )
 ;
-assert_throws_dom
+assert_throws_js
 (
-'
-NotSupportedError
-'
+TypeError
 (
 )
 =
@@ -377,11 +373,9 @@ parse
 }
 )
 ;
-assert_throws_dom
+assert_throws_js
 (
-'
-NotSupportedError
-'
+TypeError
 (
 )
 =
