--- a/testing/web-platform/tests/scroll-animations/scroll-timelines/setting-start-time.html
+++ b/testing/web-platform/tests/scroll-animations/scroll-timelines/setting-start-time.html
@@ -212,11 +212,9 @@ createScrollLinkedAnimation
 t
 )
 ;
-assert_throws_dom
+assert_throws_js
 (
-'
-NotSupportedError
-'
+TypeError
 (
 )
 =
@@ -238,11 +236,9 @@ parse
 }
 )
 ;
-assert_throws_dom
+assert_throws_js
 (
-'
-NotSupportedError
-'
+TypeError
 (
 )
 =
@@ -264,11 +260,9 @@ parse
 }
 )
 ;
-assert_throws_dom
+assert_throws_js
 (
-'
-NotSupportedError
-'
+TypeError
 (
 )
 =
