Bug 1925530 [wpt PR 48695] - [anchor] Search inclusive ancestors for the anchor-scoping element, a=testonly
Automatic update from web-platform-tests
[anchor] Search inclusive ancestors for the anchor-scoping element

We incorrectly used exclusive ancestors, making it impossible to anchor
against elements that both name and scope some anchor name.

Fixed: 373815812
Change-Id: I5eaab2f38589f02470c5229573c199f1b3715424
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5938970
Commit-Queue: Anders Hartvoll Ruud <andruudchromium.org>
Reviewed-by: Rune Lillesveen <futharkchromium.org>
Cr-Commit-Position: refs/heads/main{#1370556}

--

wpt-commits: cc9c2fdca3f82cef04dac9e15cff04fc117fd389
wpt-pr: 48695

UltraBlame original commit: 40cd0301740b243e90cf6639b4e6c8854ba3ecbf

--- a/testing/web-platform/tests/css/css-anchor-position/anchor-scope-basic.html
+++ b/testing/web-platform/tests/css/css-anchor-position/anchor-scope-basic.html
@@ -302,19 +302,6 @@ t
 template_element
 )
 {
-if
-(
-!
-template_element
-.
-hasAttribute
-(
-'
-debug
-'
-)
-)
-{
 t
 .
 add_cleanup
@@ -330,7 +317,6 @@ replaceChildren
 )
 )
 ;
-}
 main
 .
 append
@@ -359,6 +345,267 @@ main
 <
 /
 main
+>
+<
+template
+id
+=
+test_inclusive_subtree
+>
+<
+div
+class
+=
+"
+scope
+-
+a
+anchor
+-
+a
+"
+>
+<
+!
+-
+-
+A
+-
+-
+>
+<
+div
+class
+=
+anchored
+-
+a
+>
+<
+/
+div
+>
+<
+/
+div
+>
+<
+/
+template
+>
+<
+script
+>
+test
+(
+(
+t
+)
+=
+>
+{
+inflate
+(
+t
+test_inclusive_subtree
+)
+;
+assert_equals
+(
+getComputedStyle
+(
+main
+.
+querySelector
+(
+'
+.
+anchored
+-
+a
+'
+)
+)
+.
+top
+'
+10px
+'
+)
+;
+}
+'
+Can
+anchor
+to
+a
+name
+both
+defined
+and
+scoped
+by
+the
+same
+element
+'
+)
+;
+<
+/
+script
+>
+<
+template
+id
+=
+test_skips_named_anchor_with_scope
+>
+<
+div
+class
+=
+"
+anchor
+-
+a
+"
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+anchor
+-
+a
+"
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+anchor
+-
+a
+"
+>
+<
+/
+div
+>
+<
+!
+-
+-
+A
+-
+-
+>
+<
+div
+class
+=
+"
+scope
+-
+a
+anchor
+-
+a
+"
+>
+<
+/
+div
+>
+<
+div
+class
+=
+anchored
+-
+a
+>
+<
+/
+div
+>
+<
+/
+template
+>
+<
+script
+>
+test
+(
+(
+t
+)
+=
+>
+{
+inflate
+(
+t
+test_skips_named_anchor_with_scope
+)
+;
+assert_equals
+(
+getComputedStyle
+(
+main
+.
+querySelector
+(
+'
+.
+anchored
+-
+a
+'
+)
+)
+.
+top
+'
+30px
+'
+)
+;
+}
+'
+Sibling
+can
+not
+anchor
+into
+anchor
+-
+scope
+even
+when
+anchor
+-
+name
+present
+'
+)
+;
+<
+/
+script
 >
 <
 template
