Bug 1921811 - Make URLBar a popover. r=emilio,desktop-theme-reviewers,tabbrowser-reviewers,sidebar-reviewers,urlbar-reviewers,dao,mak,dao?
* Fix various z-index/paint order issues by making the urlbar a popover - which moves the open
 urlbar to the top layer, outside the toolbox

* Adjust the urlbar position when the autohide menubar shows and hides

Combines work from nsharpley and sfoster on top of emilio's original popover patch

Differential Revision: https://phabricator.services.mozilla.com/D224201

UltraBlame original commit: d4c4540a5a4ab0797d1602559f14ac3aecab2abd

--- a/browser/base/content/navigator-toolbox.inc.xhtml
+++ b/browser/base/content/navigator-toolbox.inc.xhtml
@@ -1635,16 +1635,18 @@ toolbartabstop
 /
 >
 <
-hbox
+html
+:
+div
 id
 =
 "
 urlbar
 "
-flex
+popover
 =
 "
-1
+manual
 "
 context
 =
@@ -4990,7 +4992,9 @@ hbox
 >
 <
 /
-hbox
+html
+:
+div
 >
 <
 toolbartabstop
