Backed out changeset d4c4540a5a4a (bug 1921811) for causing bc failures on browser_urlbar_keyed_search.js CLOSED TREE
UltraBlame original commit: 206b7c2f223255af764d328d8b5a4d617a4797a3

--- a/browser/base/content/navigator-toolbox.inc.xhtml
+++ b/browser/base/content/navigator-toolbox.inc.xhtml
@@ -1635,18 +1635,16 @@ toolbartabstop
 /
 >
 <
-html
-:
-div
+hbox
 id
 =
 "
 urlbar
 "
-popover
+flex
 =
 "
-manual
+1
 "
 context
 =
@@ -4992,9 +4990,7 @@ hbox
 >
 <
 /
-html
-:
-div
+hbox
 >
 <
 toolbartabstop
