Bug 1924202 - Add initial implementation for Error.isError proposal r=dminor,arai
Differential Revision: https://phabricator.services.mozilla.com/D225457

UltraBlame original commit: 0c20510d217634b9bf04b9472120787d1234d230

--- a/js/xpconnect/tests/chrome/test_xrayToJS.xhtml
+++ b/js/xpconnect/tests/chrome/test_xrayToJS.xhtml
@@ -3053,6 +3053,32 @@ constructorProps
 )
 ;
 }
+if
+(
+typeof
+Error
+.
+isError
+=
+=
+=
+"
+function
+"
+)
+{
+gConstructorProperties
+.
+Error
+.
+push
+(
+"
+isError
+"
+)
+;
+}
 /
 /
 toString
